--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,26 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/isomer-logo.svg
-
 links:
+  - title: What is Safe Sport?
+    url: /example-page/
+  - title: Reporting
+    collection: example-collection
+  - title: Safe Sport Programme
+    resource_room: true
+  - title: Effort in Safe Sport
+    url: /permalink
+  - title: Safe Sport Commission
+    url: /permalink
+  - title: Safeguarding Officers
+    url: /permalink
+    sublinks:
+      - title: Safeguarding Officers Training
+        url: /permalink
+  - title: Training & Education
+    url: /permalink
+    sublinks:
+      - title: "SportSG-ED "
+        url: /permalink
+      - title: Safeguarding Officer Training
+        url: /permalink
   - title: Contact Us
     url: /contact-us/
-  - title: Example Page
-    url: /example-page/
-  - title: Example Collection
-    collection: example-collection
-  - title: Example Resource
-    resource_room: true
