--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,3 +34,5 @@ links:
         url: /permalink
   - title: Contact Us
     url: /contact-us/
+  - title: What Is Safe Sport
+    collection: what-is-safe-sport
