--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/isomer-logo.svg
 links:
   - title: What is Safe Sport?
-    url: /example-page/
+    url: /what-is-safe-sport/permalink
   - title: "Who are we? "
     url: /permalink
     sublinks:
