--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,3 +36,5 @@ links:
     url: /contact-us/
   - title: What Is Safe Sport
     collection: what-is-safe-sport
+  - title: Who Are We
+    collection: who-are-we
