--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ links:
     url: /permalink
     sublinks:
       - title: Safe Sport Commission
-        url: /permalink
+        url: /who-are-we/permalink
       - title: Organisation Chart
         url: /permalink
   - title: Reporting
