--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ links:
   - title: What is Safe Sport?
     url: /what-is-safe-sport/permalink
   - title: "Who are we? "
-    url: /permalink
+    url: /who-are-we/permalink
     sublinks:
       - title: Safe Sport Commission
         url: /who-are-we/permalink
