--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,3 +38,5 @@ links:
     collection: what-is-safe-sport
   - title: Who Are We
     collection: who-are-we
+  - title: Reporting
+    collection: reporting
