--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,19 +2,14 @@ logo: /images/isomer-logo.svg
 links:
   - title: What is Safe Sport?
     url: /what-is-safe-sport/permalink
+  - title: Reporting
+    collection: reporting
   - title: "Who are we? "
     url: /who-are-we/permalink
     sublinks:
       - title: Safe Sport Commission
         url: /who-are-we/permalink
       - title: Organisation Chart
-        url: /permalink
-  - title: Reporting
-    url: /permalink
-    sublinks:
-      - title: Report a Safe Sport Concern
-        url: /permalink
-      - title: Helpline
         url: /permalink
   - title: Safe Sport Programme
     resource_room: true
