--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@ links:
         url: /who-are-we/permalink
       - title: Organisation Chart
         url: /permalink
+  - title: Reporting
+    url: /permalink
   - title: Safe Sport Programme
     resource_room: true
   - title: Effort in Safe Sport
