--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ links:
       - title: Organisation Chart
         url: /permalink
   - title: Reporting
-    url: /permalink
+    url: /reporting/permalink
   - title: Safe Sport Programme
     resource_room: true
   - title: Effort in Safe Sport
