--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,3 +29,5 @@ links:
     url: /contact-us/
   - title: Who Are We
     collection: who-are-we
+  - title: Safe Sport Programme
+    collection: safe-sport-programme
