--- a/_what-is-safe-sport/collection.yml
+++ b/_what-is-safe-sport/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-is-safe-sport:
     output: true
     order:
+      - 2018/.keep
       - safe-sport.md
       - effort-in-safe-sport.md
       - news.md
