--- a/_what-is-safe-sport/collection.yml
+++ b/_what-is-safe-sport/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - 2018/.keep
+      - 2018/effort-in-safe-sport.md
       - safe-sport.md
       - news.md
       - meet-the-safe-sport-taskforce.md
