--- a/_config.yml
+++ b/_config.yml
@@ -52,5 +52,5 @@ plugins:
   - jekyll-remote-theme
 staging: https://sportsg-safesport-staging.netlify.app
 prod: https://sportsg-safesport-prod.netlify.app
-is_government: true
+is_government: false
 shareicon: /images/isomer-logo.svg
