--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ colors:
     - title: media-color-one
       color: "#192243"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#4a4a4a"
     - title: media-color-three
-      color: "#00838f"
+      color: "#4a4a4a"
     - title: media-color-four
-      color: "#00838f"
+      color: "#4a4a4a"
     - title: media-color-five
-      color: "#00838f"
+      color: "#4a4a4a"
 resources_name: example-resource
 description: An Isomer site of the Singapore Government
 permalink: none
