--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,8 +3,8 @@ show_reach: true
 feedback: null
 faq: /faq/
 social_media:
-  facebook: https://www.facebook.com/YourFBPage
-  twitter: ""
-  youtube: ""
-  instagram: https://www.instagram.com/your.insta/
-  linkedin: ""
+  facebook: https://www.facebook.com/CoachSG1
+  twitter: https://twitter.com/ssicoachdev
+  youtube: https://www.youtube.com/channel/UC6S-f5ZwoXcGs_TDbimGd5g
+  instagram: https://www.instagram.com/coachsgofficial/
+  linkedin: https://www.linkedin.com/company/coachsg/
