--- a/_who-are-we/collection.yml
+++ b/_who-are-we/collection.yml
@@ -4,3 +4,4 @@ collections:
     order:
       - safe-sport-commission.md
       - safeguarding-officer.md
+      - meet-the-safe-sport-taskforce.md
