--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/isomer-logo.svg
 links:
-  - title: What is Safe Sport
-    collection: what-is-safe-sport
+  - title: Safe Sport
+    collection: safe-sport
   - title: Who are we
     collection: who-are-we
   - title: Reporting
