--- a/_reporting/collection.yml
+++ b/_reporting/collection.yml
@@ -2,5 +2,6 @@ collections:
   reporting:
     output: true
     order:
+      - Support Network.md
       - reporting.md
       - other-helplines.md
