--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/isomer-logo.svg
 links:
-  - title: Who are we
-    collection: who-are-we
+  - title: About Us
+    collection: about-us
   - title: Reporting
     collection: reporting
   - title: Safe Sport Programme
