--- a/_reporting/collection.yml
+++ b/_reporting/collection.yml
@@ -2,6 +2,7 @@ collections:
   reporting:
     output: true
     order:
+      - Safeguarding Officer .md
       - Support Network.md
       - reporting.md
       - other-helplines.md
