--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -2,5 +2,6 @@ collections:
   faq:
     output: true
     order:
+      - Training and Education.md
       - Safe Sport Programme.md
       - Reporting.md
