--- a/_training-and-education/collection.yml
+++ b/_training-and-education/collection.yml
@@ -2,5 +2,6 @@ collections:
   training-and-education:
     output: true
     order:
+      - Workshops.md
       - Awareness Module.md
       - safeguarding-officer-training.md
