--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ links:
     collection: training-and-education
   - title: Reporting
     collection: reporting
-  - title: About Us
-    collection: about-us
+  - title: About
+    collection: about
   - title: Faq
     collection: faq
   - title: Contact Us
