--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Safeguarding Sport in Singapore
 url: ""
-favicon: /images/favicon-isomer.ico
+favicon: /images/logos/Blue%20Pic%20Only.png
 colors:
   primary-color: "#202945"
   secondary-color: "#b12028"
