--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - safe-sport-commission.md
-      - Member Organisations.md
+      - Commission Members.md
