--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,5 +2,5 @@ collections:
   about:
     output: true
     order:
-      - safe-sport-commission.md
+      - Our Work.md
       - Commission Members.md
