--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - Our Work.md
-      - Commission Members.md
+      - Safe Sport Commission Members.md
