--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Safe Sport Unified Code.md
       - Purpose.md
       - what-is-the-safe-sport-programme.md
       - Community Consultations.md
