--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -4,5 +4,5 @@ collections:
     order:
       - Purpose.md
       - Safe Sport Unified Code.md
-      - The Safe Sport Programme?.md
+      - The Safe Sport Programme.md
       - Community Consultations.md
