--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Guiding Principles.md
       - Purpose.md
       - Safe Sport Unified Code.md
       - The Safe Sport Programme.md
