--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Guiding Principles.md
-      - Purpose.md
+      - Purpose and Principles.md
       - Safe Sport Unified Code.md
       - The Safe Sport Programme.md
       - Community Consultations.md
