--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: safe-sport-programme
   - title: Training And Education
     collection: training-and-education
-  - title: Reporting
+  - title: Case Management
     collection: reporting
   - title: About
     collection: about
