--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#4a4a4a"
 resources_name: example-resource
-description: An Isomer site of the Singapore Government
+description: Home of the Safe Sport Commission
 permalink: none
 baseurl: ""
 exclude:
