--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Safeguarding Sport in Singapore
 url: ""
-favicon: /images/logos/Pic%20only%20Grey.png
+favicon: /images/ssc-favicon.ico
 colors:
   primary-color: "#202945"
   secondary-color: "#b12028"
