--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
   - title: Training And Education
     collection: training-and-education
   - title: Case Management
-    collection: reporting
+    collection: case-management
   - title: About
     collection: about
   - title: Faq
