--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Safeguarding Sport in Singapore
+title: "Safeguarding in Sport "
 url: ""
 favicon: /images/ssc-favicon.ico
 colors:
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#4a4a4a"
 resources_name: example-resource
-description: Home of the Safe Sport Commission
+description: Home of the Singapore Safe Sport Commission
 permalink: none
 baseurl: ""
 exclude:
