--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,5 @@ links:
     collection: about
   - title: Faq
     collection: faq
+  - title: Policy And Advocacy
+    collection: policy-and-advocacy
