--- a/_policy-and-advocacy/collection.yml
+++ b/_policy-and-advocacy/collection.yml
@@ -2,4 +2,4 @@ collections:
   policy-and-advocacy:
     output: true
     order:
-      - policies-and-procedures.md
+      - Policies And Procedures.md
