--- a/_case-management/collection.yml
+++ b/_case-management/collection.yml
@@ -6,4 +6,4 @@ collections:
       - Reporting a Concern.md
       - Support Network.md
       - Safeguarding Officer .md
-      - other-helplines.md
+      - Other Helplines.md
