--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,4 @@ plugins:
 staging: https://sportsg-safesport-staging.netlify.app
 prod: https://sportsg-safesport-prod.netlify.app
 is_government: false
-shareicon: /images/gymansticssafesportdefiniti.png
+shareicon: /images/shareicon.png
