--- a/_training-and-education/collection.yml
+++ b/_training-and-education/collection.yml
@@ -3,5 +3,5 @@ collections:
     output: true
     order:
       - Awareness Module.md
-      - safeguarding-officer-training.md
+      - Safeguarding Officer Training.md
       - Workshops.md
