--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/logos/SSCS_PANTONE_H_Blue.png
+logo: /images/websiteheader.png
 links:
   - title: Safe Sport Programme
     collection: safe-sport-programme
