--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ colors:
   secondary-color: "#b12028"
   media-colors:
     - title: media-color-one
-      color: "#ededed"
+      color: "#b12028"
     - title: media-color-two
       color: "#4a4a4a"
     - title: media-color-three
