--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ colors:
       color: "#4a4a4a"
     - title: media-color-five
       color: "#4a4a4a"
-resources_name: example-resource
+resources_name: Resources
 description: "Home of the Safe Sport Commission Singapore "
 permalink: none
 baseurl: ""
