--- a/_policy-and-advocacy/collection.yml
+++ b/_policy-and-advocacy/collection.yml
@@ -4,5 +4,5 @@ collections:
     order:
       - Policies And Procedures.md
       - Policy Resources.md
-      - Assessing Risks.md
+      - Assessing and Managing Risks.md
       - Safe Recruitment.md
