--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -2,6 +2,7 @@ collections:
   faq:
     output: true
     order:
+      - Guide to Hearings.md
       - Safe Sport Programme.md
       - Training and Education.md
       - Reporting.md
