{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1772"}

--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -5,5 +5,5 @@ collections:
       - Safe Sport Programme.md
       - Training and Education.md
       - Reporting.md
-      - Guide to Hearings.md
+      - Respondent's Guide to Hearings.md
       - Support Network.md
