changes to respondent's guide to hearings (#69)
* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Create file: STF Logo.png

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Create file: SCA Logo.png

* Update file: Member Organisations.md

* Create file: high res SCA Logo.png

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* 

--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -4,5 +4,6 @@ collections:
     order:
       - Our Work.md
       - Safe Sport Commission Members.md
+      - Member Organisations.md
       - History.md
       - Newsletter.md
