--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -5,4 +5,5 @@ collections:
       - Safe Sport Programme.md
       - Training and Education.md
       - Reporting.md
+      - Respondent's Guide to Hearings.md
       - Support Network.md
