{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1772"}

--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Member Organisations.md
       - Primer.md
       - Purpose and Principles.md
       - Safe Sport Unified Code.md
