editing and changes to website (#70)
* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisations.md

* Update file: Member Organisat

--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -8,3 +8,4 @@ collections:
       - The Safe Sport Programme.md
       - Community Consultations.md
       - Key Signatories.md
+      - Member Organisations.md
