--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Safeguarding in Sport "
+title: Safeguarding in Sport
 url: ""
 favicon: /images/ssc-favicon.ico
 colors:
@@ -15,8 +15,8 @@ colors:
       color: "#4a4a4a"
     - title: media-color-five
       color: "#4a4a4a"
-resources_name: Resources
-description: "Home of the Safe Sport Commission Singapore "
+resources_name: latest
+description: Home of the Safe Sport Commission Singapore
 permalink: none
 baseurl: ""
 exclude:
@@ -54,3 +54,4 @@ staging: https://staging.dro5w6zlj5mvl.amplifyapp.com/
 prod: https://master.dro5w6zlj5mvl.amplifyapp.com/
 is_government: false
 shareicon: /images/shareicon.png
+facebook-pixel: ""
