--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Safeguarding in Sport
-url: ""
+title: Safeguarding Sport in Singapore
+url: https://www.safesport.sg
 favicon: /images/ssc-favicon.ico
 colors:
   primary-color: "#202945"
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#4a4a4a"
 resources_name: latest
-description: Home of the Safe Sport Commission Singapore
+description: Home of Safe Sport Commission Singapore
 permalink: none
 baseurl: ""
 exclude:
@@ -55,3 +55,5 @@ prod: https://master.dro5w6zlj5mvl.amplifyapp.com/
 is_government: false
 shareicon: /images/shareicon.png
 facebook-pixel: ""
+google_analytics_ga4: ""
+linkedin-insights: ""
