--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ colors:
     - title: media-color-three
       color: "#b12028"
     - title: media-color-four
-      color: "#cccccc"
+      color: "#b1b0b0"
     - title: media-color-five
       color: "#4a4a4a"
 resources_name: latest
