--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ colors:
   secondary-color: "#b12028"
   media-colors:
     - title: media-color-one
-      color: "#b1b0b0"
+      color: "#9e9d9d"
     - title: media-color-two
       color: "#202945"
     - title: media-color-three
