--- a/_case-management/collection.yml
+++ b/_case-management/collection.yml
@@ -2,6 +2,7 @@ collections:
   case-management:
     output: true
     order:
+      - Assessing Seriousness.md
       - Case Management Service.md
       - Reporting a Concern.md
       - Support Network.md
