{"message":"Update file: collection.yml","userId":"483","fileName":"collection.yml"}

--- a/_case-management/collection.yml
+++ b/_case-management/collection.yml
@@ -2,6 +2,7 @@ collections:
   case-management:
     output: true
     order:
+      - Disciplinary Database/.keep
       - Reporting a Concern.md
       - Case Management Service.md
       - Assessing Seriousness.md
