{"message":"Update file: navigation.yml","userId":"95","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ links:
     collection: about
   - title: Training And Education
     collection: training-and-education
-  - title: Policy And Advocacy
-    collection: policy-and-advocacy
+  - title: Policy And Research
+    collection: policy-and-research
   - title: Case Management
     collection: case-management
   - title: Faq
