{"message":"Update file: _config.yml","userId":"3071","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -55,5 +55,5 @@ prod: https://master.dro5w6zlj5mvl.amplifyapp.com/
 is_government: false
 shareicon: /images/shareicon.png
 facebook-pixel: ""
-google_analytics_ga4: ""
+google_analytics_ga4: G-82NZQNT02S
 linkedin-insights: ""
