--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,6 +2,7 @@ collections:
   about:
     output: true
     order:
+      - Safe Sport Disciplinary Panel Members.md
       - Our Work.md
       - Safe Sport Commission Members.md
       - History.md
