{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Our Work.md
-      - Safe Sport Commission Members.md
+      - Safe Sport Commission.md
       - Safe Sport Disciplinary Panel Members.md
       - History.md
       - Newsletter.md
