{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -4,6 +4,6 @@ collections:
     order:
       - Our Work.md
       - Safe Sport Commission.md
-      - Safe Sport Disciplinary Panel Members.md
+      - Safe Sport Disciplinary Panel.md
       - History.md
       - Newsletter.md
