{"message":"Update file: collection.yml","userId":"95","fileName":"collection.yml"}

--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -2,7 +2,7 @@ collections:
   faq:
     output: true
     order:
-      - Safe Sport Programme.md
+      - FAQs.md
       - Training and Education.md
       - Reporting.md
       - Respondent's Guide to Hearings.md
