{"message":"Update file: collection.yml","userId":"95","fileName":"collection.yml"}

--- a/_faq/collection.yml
+++ b/_faq/collection.yml
@@ -2,6 +2,7 @@ collections:
   faq:
     output: true
     order:
+      - spexCarding.md
       - FAQs.md
       - Training and Education.md
       - Reporting.md
