{"message":"Update file: collection.yml","userId":"95","fileName":"collection.yml"}

--- a/_training-and-education/collection.yml
+++ b/_training-and-education/collection.yml
@@ -2,7 +2,7 @@ collections:
   training-and-education:
     output: true
     order:
-      - training framework.md
+      - Training Framework.md
       - Awareness Module.md
       - Safeguarding Officer Training.md
       - Workshops.md
