{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -1,4 +1,5 @@
 collections:
   safeguarding-officer-resources:
     output: true
-    order: []
+    order:
+      - Resources for Safeguarding Officers.md
