{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -2,5 +2,5 @@ collections:
   safeguarding-officer-resources:
     output: true
     order:
-      - Pre Training.md
+      - Training Overview.md
       - Resources for Safeguarding Officers.md
