{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -2,5 +2,6 @@ collections:
   safeguarding-officer-resources:
     output: true
     order:
+      - Pre Reading.md
       - Training Overview.md
       - Resources for Safeguarding Officers.md
