--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -2,6 +2,7 @@ collections:
   safeguarding-officer-resources:
     output: true
     order:
+      - Post Training.md
       - Training Overview.md
       - Pre Reading.md
       - Resources for Safeguarding Officers.md
