{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -4,4 +4,4 @@ collections:
     order:
       - Training Overview.md
       - Pre Reading.md
-      - Resources for Safeguarding Officers.md
+      - Post Training Resources.md
