{"message":"Update file: collection.yml","userId":"3071","fileName":"collection.yml"}

--- a/_safeguarding-officer-resources/collection.yml
+++ b/_safeguarding-officer-resources/collection.yml
@@ -2,6 +2,7 @@ collections:
   safeguarding-officer-resources:
     output: true
     order:
+      - Reporting Toolkit.md
       - Training Overview.md
       - Pre Reading.md
       - Post Training Resources.md
