--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Example Title.md
       - Primer.md
       - Purpose and Principles.md
       - Safe Sport Unified Code.md
