--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ links:
     collection: policy-and-research
   - title: Case Management
     collection: case-management
-  - title: Faq
-    collection: faq
+  - title: Resources
+    collection: resources
