--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,7 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
-      - Safe Sport Unified Code.md
+      - Safe Sport Unified Code and Handbook.md
       - Community Consultations.md
       - Key Signatories.md
       - Member Organisations.md
