--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,6 +2,7 @@ collections:
   about:
     output: true
     order:
+      - Safe Sport Unified Code and Handbook.md
       - Our Work.md
       - Safe Sport Commission.md
       - Safe Sport Disciplinary Panel.md
