{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,6 +2,7 @@ collections:
   about:
     output: true
     order:
+      - Community Consultations.md
       - Safe Sport Unified Code and Handbook.md
       - Our Work.md
       - Safe Sport Commission.md
