--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Safe Sport Unified Code and Handbook.md
       - Key Signatories.md
       - Member Organisations.md
       - Affiliate Member.md
