{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Safe Sport Disciplinary Panel.md
       - Safe Sport Commission.md
       - Safe Sport Unified Code and Handbook.md
       - Key Signatories.md
