{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - Community Consultations.md
       - Newsletter.md
       - Safe Sport Disciplinary Panel.md
       - Safe Sport Commission.md
