--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   safe-sport-programme:
     output: true
     order:
+      - The Programme.md
       - Purpose and Principles.md
       - Community Consultations.md
       - Safe Sport Disciplinary Panel.md
