{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_safe-sport-programme/collection.yml
+++ b/_safe-sport-programme/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Purpose and Principles.md
       - The Programme.md
-      - Safe Sport Unified Code and Handbook.md
+      - Safe Sport Unified Code.md
       - Community Consultations.md
       - Safe Sport Disciplinary Panel.md
       - Safe Sport Commission.md
