{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_resources/collection.yml
+++ b/_resources/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - FAQs.md
-      - Training and Education.md
+      - Training and Education Resources.md
       - spexCarding.md
       - Reporting.md
       - Respondent's Guide to Hearings.md
