{"message":"Update file: collection.yml","userId":"105316","fileName":"collection.yml"}

--- a/_training-and-education/collection.yml
+++ b/_training-and-education/collection.yml
@@ -2,6 +2,7 @@ collections:
   training-and-education:
     output: true
     order:
+      - Education Resources.md
       - Training Framework.md
       - Awareness Module.md
       - Safeguarding Officer Training.md
