{"message":"Update file: navigation.yml","userId":"105316","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@ links:
     collection: policy-and-research
   - title: Case Management
     collection: case-management
-  - title: Resources
-    collection: resources
+  - title: Faqs
+    collection: faqs
