--- a/_training-and-education/collection.yml
+++ b/_training-and-education/collection.yml
@@ -2,7 +2,7 @@ collections:
   training-and-education:
     output: true
     order:
-      - Training and Education Resources.md
+      - Education Resources.md
       - Training Framework.md
       - Awareness Module.md
       - Safeguarding Officer Training.md
